--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -44,3 +44,13 @@ jobs:
           file: ./Portal/Dockerfile
           tags: supnovik/kotiki:latest
           push: true
+   
+  redeploy:
+    needs: [build, docker]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Webhook Action
+        uses: joelwmale/webhook-action@2.1.0
+        with:
+        # The url to send the webhook event to
+          url: ${{secrets.WEB_REDEPLOY_URL}}      
